--- a/Proyecto2_BDA/Proyecto2_BDA_Presentacion/src/main/java/Paneles/AgregarLaboratorio.form
+++ b/Proyecto2_BDA/Proyecto2_BDA_Presentacion/src/main/java/Paneles/AgregarLaboratorio.form
@@ -59,6 +59,11 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JSpinner" name="HoraInicio">
+      <Properties>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[64, 22]"/>
+        </Property>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="20" y="160" width="-1" height="-1"/>
@@ -66,6 +71,11 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JSpinner" name="MinInicio">
+      <Properties>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[64, 22]"/>
+        </Property>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="110" y="160" width="-1" height="-1"/>
@@ -126,6 +136,11 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JSpinner" name="horaFin">
+      <Properties>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[64, 22]"/>
+        </Property>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="20" y="240" width="-1" height="-1"/>
@@ -133,6 +148,11 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JSpinner" name="MinFin">
+      <Properties>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[64, 22]"/>
+        </Property>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="110" y="240" width="-1" height="-1"/>
